integration de sweet alert avec succès, mais utilise la connexion

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,11 @@
         line-height: 60px;
         background-color: #fff;
     }
+
+
+.nav {
+
+	position: fixed;
+	background-color: green;
+
+}
